- Added run task to execute the application via gradle

--- a/manager/build.gradle
+++ b/manager/build.gradle
@@ -77,6 +77,14 @@ dependencies {
 }
 
 ////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
+// Execution task
+task run(dependsOn: classes, type: JavaExec) {
+    main = "com.lumenaut.poolmanager.Main"
+    classpath = sourceSets.main.runtimeClasspath
+    standardInput = System.in
+}
+
+////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
 // Gradle wrapper
 
 task wrapper(type: Wrapper) {
