- Added compile flags for deprecation and unchecked assignments - Fixed unsafe assignment warning in SettingsController - Added README (work in progress)

--- a/manager/build.gradle
+++ b/manager/build.gradle
@@ -38,6 +38,18 @@ buildscript {
     }
 }
 
+////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
+// Compiler flags
+gradle.projectsEvaluated {
+    tasks.withType(JavaCompile) {
+        // Warn about deprecations
+        options.compilerArgs << "-Xlint:deprecation"
+
+        // Warn about unchecked casts
+        options.compilerArgs << "-Xlint:unchecked"
+    }
+}
+
 ////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
 // Repositories
 
