- Added new button to the transactions planner to extract donations data from the voters data (if any has been included) and update the donations tab with it - Updated data format for donations data to include a list of error entries, useful for notifying users that they made a mistake when specifying their donation - Code cleanup

--- a/manager/.gitignore
+++ b/manager/.gitignore
@@ -9,6 +9,8 @@
 .idea/libraries
 .idea/dbnavigator.xml
 .idea/fileTemplates/includes/File Header.java
+.idea/markdown-navigator.xml
+.idea/markdown-navigator/
 
 # Gradle folders
 .gradle
@@ -21,3 +23,4 @@ out/
 .*~
 /data/settings.ini
 /data/*/
+
